app/assets/sass/application.scss
// global styles for <a> and <p> tags
$govuk-global-styles: true;

// We can't mount GOV.UK Frontend's assets at root as it's done automatically by the extensions framework.
$govuk-assets-path: '/govuk/assets/';

// Import GOV.UK Frontend and any extension styles if extensions have been configured
@import "lib/extensions/extensions";

// Patterns that aren't in Frontend
@import "patterns/step-by-step-header";
@import "patterns/step-by-step-nav";
@import "patterns/step-by-step-related";
@import "patterns/task-list";
@import "patterns/related-items";

// Components that aren't in Frontend
@import "components/action-link";

// Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
.app-hero {
  background-color: govuk-colour("blue");
  margin-top: - govuk-spacing(2);
  padding: govuk-spacing(3) 0;

  .govuk-breadcrumbs__link,
  .govuk-caption-l,
  .govuk-heading-l,
  .govuk-body,
  .govuk-link,
  p,
  a {
    color: govuk-colour("white");
  }

  a:focus {
    color: $govuk-text-colour;
  }
}

.app-cta {
  @include govuk-responsive-margin(4, "top");
}

.app-category {
  margin-bottom: govuk-spacing(6);

  h2 {
    border-bottom: 3px solid govuk-colour("blue");
    margin-bottom: 0;
    padding: 0 0 20px;
  }
}

.app-section {
  border-top: 1px solid $govuk-border-colour;
  padding-top: govuk-spacing(6);

  &:nth-child(2) {
    border-top: 0;
  }
}

.app-aside {
  .govuk-body {
    @include govuk-font(16);
    margin-bottom: govuk-spacing(1);
  }

  .govuk-list {
    @include govuk-font(16);
  }
}

.app-result {
  border-bottom: 1px solid $govuk-border-colour;
  padding-top: govuk-spacing(6);

  &:first-child {
    padding-top: 0;
  }

  &:last-child {
    border-bottom: none;
  }

  .govuk-heading-s {
    margin-bottom: govuk-spacing(2);
  }

  .govuk-body {
    margin-bottom: govuk-spacing(6);
  }

  .govuk-tag {
    margin-left: govuk-spacing(2);
  }
}

.app-result--highlighted {
  background-color: govuk-colour("light-grey");
  border-left: 5px solid govuk-colour("blue");
  padding: govuk-spacing(3);
  margin-bottom: govuk-spacing(6);
}

.app-sign-up {
  padding: govuk-spacing(5);
  background: govuk-colour("light-grey");
  margin-top: govuk-spacing(6);

  .govuk-heading-s {
    margin-top: 0;
    margin-bottom: govuk-spacing(3);
  }

  .govuk-body {
    margin-bottom: 0;
  }
}

.app-other {
  background: govuk-colour("light-grey");
  padding-bottom: govuk-spacing(6);

  .app-section {
    border-top: 0;
  }
}

.app-list-participants {
  li {
    margin-bottom: govuk-spacing(3);
  }
}

